--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -26,6 +26,7 @@
     <script src="/search.product/search-product.component.js"></script>
     <script src="/catalog/categories/category.editor/category-editor.component.js"></script>
     <script src="/catalog/categories/category.editor/category-creator.component.js"></script>
+    <script src="/catalog/product.detail/product.editor/product-creator.component.js"></script>
 </head>
 <body>
 
