--- a/src/main/webapp/catalog/product.detail/product-detail.template.html
+++ b/src/main/webapp/catalog/product.detail/product-detail.template.html
@@ -65,8 +65,7 @@
 
     <div class="col-sm-8" id="description">
         <b>Description:</b>
-        <p>
-            {{product.description}}
+        <p>{{product.description}}
     </div>
 
 </div>
