--- a/src/main/webapp/catalog/product.detail/product.editor/product-editor.template.html
+++ b/src/main/webapp/catalog/product.detail/product.editor/product-editor.template.html
@@ -10,27 +10,43 @@
         <!--<img ng-src="/resources/image/products/{{product.id}}.jpg" id="photo">-->
     </div>
 
-    <div class="col-sm-4" id="main-information">
+    <div class="col-sm-4 form-group" id="main-information">
 
         <div id="capital-row">
-            <!--{{product.name}}-->
+            <input id="name" class="form-control" ng-model="name" placeholder="Name" required>
         </div>
 
-        <div id="price-container">
-            <!--<span id="price">-->
-                <!--{{product.price}}&nbsp;$-->
-            <!--</span>-->
+        <div class="dropdown">
+            <select ng-model="category" id="category" class="form-control" required
+                    ng-options="category.name for category in categories track by category.id">
+                <option value="" disabled selected hidden>Category</option>
+                <!--<option value="{{category}}" ng-repeat="category in categories | orderBy:orderProp">
+                    {{category.name}}
+                </option>-->
+            </select>
         </div>
 
-        <div id="capacity">
-            Capacity:&nbsp;{{product.capacity}}&nbsp;l
+        <div style="display: flex; margin-top: 20px">
+            <div id="price-container">
+                <label for="price">Price:</label>
+                <input id="price" ng-model="price" class="form-control" type="number" placeholder="Price" required>
+            </div>
+
+            <div id="capacity-container">
+                <label for="capacity">Capacity:</label>
+                <input id="capacity" ng-model="capacity" class="form-control" type="number" placeholder="Capacity" required>
+            </div>
         </div>
 
     </div>
 
-    <div class="col-sm-8" id="description">
-        <b>Description:</b>
-        <!--<p>{{product.description}}-->
+    <div class="col-sm-8" id="description-container">
+        <label for="description">Description:</label>
+        <textarea id="description" ng-model="description" class="form-control" type="" maxlength="2000"></textarea>
+    </div>
+
+    <div class="col-sm-12" id="save-button-container">
+        <button id="save-button" ng-click="save()" type="button" class="btn btn-success">Save</button>
     </div>
 
 </div>
