--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -24,9 +24,10 @@
     <script src="/basket/basket.component.js"></script>
     <script src="/basket/basket.service.js"></script>
     <script src="/search.product/search-product.component.js"></script>
-    <script src="/catalog/categories/category.editor/category-editor.component.js"></script>
     <script src="/catalog/categories/category.editor/category-creator.component.js"></script>
+    <script src="/catalog/categories/category.editor/category-editor.component.js"></script>
     <script src="/catalog/product.detail/product.editor/product-creator.component.js"></script>
+    <script src="/catalog/product.detail/product.editor/product-editor.component.js"></script>
 </head>
 <body>
 
