--- a/src/main/webapp/catalog/product.detail/product.editor/product-editor.template.html
+++ b/src/main/webapp/catalog/product.detail/product.editor/product-editor.template.html
@@ -3,7 +3,7 @@
 </head>
 
 <div id="panel-heading" class="panel-heading">
-    Create product
+    {{action}} product
 </div>
 <div class="panel-body">
     <div class=" col-sm-4 thumbnail">
@@ -14,7 +14,7 @@
         <div class="col-sm-4 form-group" id="main-information">
 
             <div id="capital-row">
-                <input id="name" class="form-control" ng-model="name" placeholder="Name" required>
+                <input ng-model="name" id="name" class="form-control" placeholder="Name" required>
             </div>
 
             <div class="dropdown">
