--- a/src/main/webapp/catalog/product.detail/product.editor/product-editor.template.html
+++ b/src/main/webapp/catalog/product.detail/product.editor/product-editor.template.html
@@ -45,7 +45,7 @@
 
         <div class="col-sm-8" id="description-container">
             <label for="description">Description:</label>
-            <textarea id="description" ng-model="description" class="form-control" type="" maxlength="2000"></textarea>
+            <textarea id="description" ng-model="description" class="form-control" maxlength="2000"></textarea>
         </div>
 
         <div class="col-sm-12" id="save-button-container">
