--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -65,9 +65,10 @@
 
                 <form class="navbar-form navbar-left" ng-submit="search()">
                     <div class="input-group">
-                        <input ng-model="searchParameter" class="form-control search-group" placeholder="Search">
+                        <input ng-model="searchParameter" placeholder="Search"
+                               class="form-control search-group" id="search-input">
                         <div class="input-group-btn">
-                            <button class="btn btn-default search-group" type="submit">
+                            <button class="btn btn-default search-group" id="search-submit" type="submit">
                                 <i class="glyphicon glyphicon-search"></i>
                             </button>
                         </div>
@@ -75,11 +76,11 @@
                 </form>
 
                 <ul class="nav navbar-nav navbar-right">
-                    <div class="nav navbar-nav" ng-if="!isAuthority('ROLE_ANONYMOUS')" style="margin-right: 50px; font-weight: 100">
+                    <div id="user-name" class="nav navbar-nav" ng-if="!isAuthority('ROLE_ANONYMOUS')">
                         <li><a><span class="glyphicon glyphicon-user"></span>&nbsp;{{user.username}}</a></li>
                     </div>
                     <div class="nav navbar-nav">
-                        <li id="basket"><a href="" ng-click="showBasket()">
+                        <li id="basket"><a id="a-basket" href="" ng-click="showBasket()">
                             <div id="goods-quantity-bracket">
                                 <span class="glyphicon glyphicon-shopping-cart"></span>&nbsp;Basket
                                 ({{basketSize}})
