--- a/src/main/webapp/catalog/product.detail/product-detail.template.html
+++ b/src/main/webapp/catalog/product.detail/product-detail.template.html
@@ -42,9 +42,9 @@
     <div class="col-sm-2" id="buy-container">
         <div>
             <a>
-                <button ng-click="addToBasket(product)" type="button" class="btn btn-success" id="buy-button"
+                <button ng-click="addToCart(product)" type="button" class="btn btn-success" id="buy-button"
                         ng-disabled="!isInStock(product)">
-                    Add to basket
+                    Add to Cart
                 </button>
             </a>
         </div>
