--- a/src/main/webapp/catalog/products/catalog-products.template.html
+++ b/src/main/webapp/catalog/products/catalog-products.template.html
@@ -44,8 +44,8 @@
                         <div class="row">
                             <span id="price">{{product.price}}&nbsp;$</span>
                             <a>
-                            <button ng-disabled="!isInStock(product)" ng-click="addToBasket(product)" type="button"
-                                    class="btn btn-success" id="buy-button">Add to basket</button>
+                            <button ng-disabled="!isInStock(product)" ng-click="addToCart(product)"
+                                    type="button" class="btn btn-success" id="buy-button">Add to Cart</button>
                             </a>
                         </div>
                         </a>
