counter in CartDTO renamed to quantity

--- a/src/main/webapp/cart/cart.template.html
+++ b/src/main/webapp/cart/cart.template.html
@@ -33,7 +33,7 @@
                                     class="btn btn-default spinner-btn" data-dir="dwn">
                             <span class="glyphicon glyphicon-minus"></span></button>
 				        </span>
-                        <input class="form-control text-center" value="{{product.counter}}" readonly>
+                        <input class="form-control text-center" value="{{product.quantity}}" readonly>
                         <span class="input-group-btn">
 					        <button ng-click="addToCart(product)"
                                     class="btn btn-default spinner-btn" data-dir="up">
