--- a/src/main/webapp/catalog/product.detail/product-detail.template.html
+++ b/src/main/webapp/catalog/product.detail/product-detail.template.html
@@ -18,7 +18,7 @@
 </div>
 <div class="panel-body">
     <div class=" col-sm-4 thumbnail">
-        <img ng-src="/resources/image/products/{{product.id}}.jpg" id="photo">
+        <img ng-src="data:image/jpeg;base64,{{photo}}" id="photo">
     </div>
     <form>
     <div class="col-sm-4" id="main-information">
