--- a/src/main/webapp/catalog/product.detail/product.editor/product-editor.template.html
+++ b/src/main/webapp/catalog/product.detail/product.editor/product-editor.template.html
@@ -29,33 +29,42 @@
     </div>
 
     <form ng-submit="save()">
-        <div class="col-sm-4 form-group" id="main-information">
+        <div class="col-sm-8">
+            <div class="col-sm-4 form-group" id="main-information">
 
-            <div id="capital-row">
-                <input ng-model="name" id="name" class="form-control" placeholder="Name" required>
+                <div id="capital-row">
+                    <input ng-model="name" id="name" class="form-control" placeholder="Name" required>
+                </div>
+
+                <div class="dropdown">
+                    <select ng-model="category" id="category" class="form-control" required
+                            ng-options="category.name for category in categories track by category.id">
+                        <option value="" disabled selected hidden>Category</option>
+                    </select>
+                </div>
+
+                <div id="price-capacity-container">
+                    <div id="price-container">
+                        <label for="price">Price:</label>
+                        <input id="price" ng-model="price" class="form-control" type="number" step="0.01"
+                               placeholder="Price ($)" required>
+                    </div>
+
+                    <div id="capacity-container">
+                        <label for="capacity">Capacity:</label>
+                        <input id="capacity" ng-model="capacity" class="form-control" type="number" step="0.01"
+                               placeholder="Capacity (l)" required>
+                    </div>
+                </div>
+
             </div>
 
-            <div class="dropdown">
-                <select ng-model="category" id="category" class="form-control" required
-                        ng-options="category.name for category in categories track by category.id">
-                    <option value="" disabled selected hidden>Category</option>
+            <div id="status-container" ng-if='editor'>
+                <select ng-model="status" id="status" class="form-control"
+                        ng-options="status for status in statusList track by status">
+                    <option value="" disabled selected hidden>Status</option>
                 </select>
             </div>
-
-            <div style="display: flex; margin-top: 20px">
-                <div id="price-container">
-                    <label for="price">Price:</label>
-                    <input id="price" ng-model="price" class="form-control" type="number" step="0.01"
-                           placeholder="Price ($)" required>
-                </div>
-
-                <div id="capacity-container">
-                    <label for="capacity">Capacity:</label>
-                    <input id="capacity" ng-model="capacity" class="form-control" type="number" step="0.01"
-                           placeholder="Capacity (l)" required>
-                </div>
-            </div>
-
         </div>
 
         <div class="col-sm-8" id="description-container">
@@ -71,6 +80,7 @@
                 <span id="successMessage">{{successMessage}}</span>
             </div>
         </div>
+
     </form>
 
 </div>
