order creation created catalog styling changed

--- a/src/main/webapp/catalog/product.detail/product-detail.template.html
+++ b/src/main/webapp/catalog/product.detail/product-detail.template.html
@@ -15,6 +15,7 @@
             Remove product
         </button>
     </span>
+    <hr id="hr-heading">
 </div>
 <div class="panel-body">
     <div class=" col-sm-4 thumbnail">
