--- a/src/main/webapp/catalog/products/catalog-products.template.html
+++ b/src/main/webapp/catalog/products/catalog-products.template.html
@@ -12,6 +12,7 @@
             <button type="button" class="btn btn-default category-actions-button">Add category</button>
         </a>
     </span>
+    <hr id="hr-heading">
 </div>
 <div class="panel-body">
     <div ng-repeat="product in products | orderBy:orderProp">
