--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -27,6 +27,7 @@
     <script src="/catalog/categories/category.editor/category-editor.component.js"></script>
     <script src="/catalog/product.detail/product.editor/product-creator.component.js"></script>
     <script src="/catalog/product.detail/product.editor/product-editor.component.js"></script>
+    <script src="/order/creation/order-creation.component.js"></script>
 </head>
 <body>
 
