order creation view

--- a/src/main/webapp/sign.up/sign-up.template.html
+++ b/src/main/webapp/sign.up/sign-up.template.html
@@ -68,7 +68,7 @@
             <label for="address" class="col-sm-3 control-label">Address</label>
             <div class="col-sm-9">
                 <input ng-model="address" class="form-control" id="address" oninput="validateAddress(this)"
-                       placeholder="Insert your Address"/>
+                       placeholder="Insert your Address" maxlength="300"/>
             </div>
         </div>
 
