--- a/src/main/webapp/order/creation/order-creation.template.html
+++ b/src/main/webapp/order/creation/order-creation.template.html
@@ -1,43 +1,43 @@
 <head>
-    <link rel="stylesheet" href="/login/login.styles.css"/>
+    <link rel="stylesheet" href="/order/creation/order-creation.styles.css"/>
 </head>
 
-<section id="login">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12">
-                <div class="form-wrap">
-                    <div id="errorMessage">
-                        {{errorMessage}}
-                    </div>
-                    <h1>Log in with email for your account</h1>
-                    <form ng-submit="submit()" method="post" id="login-form" autocomplete="off">
-                        <div class="form-group">
-                            <label for="email" class="sr-only">Email</label>
+<div class="panel-body">
+    <form id="order-form" class="col-sm-6 col-sm-offset-3">
+        <div id="capital-row">Check the data</div>
 
-                            <div class="input-group">
-                                <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-                                <input ng-model="email" type="email" id="email" class="form-control"
-                                       placeholder="somebody@example.com" required>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="password" class="sr-only">Password</label>
-
-                            <div class="input-group">
-                                <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                                <input ng-model="password" type="password" id="password" class="form-control"
-                                       placeholder="Password" required>
-                            </div>
-                        </div>
-                        <div class="checkbox">
-                            <span class="character-checkbox" onclick="showPassword()"></span>
-                            <span class="label">Show password</span>
-                        </div>
-                        <input type="submit" class="btn btn-custom btn-lg btn-block" value="Log in">
-                    </form>
-                </div>
+        <div class="col-sm-3 block-container">
+            <div>
+                {{userInformation.name}} {{userInformation.surname}}
             </div>
+
+            <div class="form-group">
+                <input ng-model="phone" id="phone" class="form-control phone" maxlength="28"
+                       oninput="validatePhone(this);" placeholder="Insert your Phone Number *" required/>
+            </div>
+
+            <div class="form-group">
+                    <textarea ng-model="address" class="form-control" id="address" oninput="validateAddress(this)"
+                              placeholder="Insert your Address *" required maxlength="300"/>
+            </div>
+
         </div>
-    </div>
-</section>
+
+        <div class="col-sm-3 block-container">
+            <select class="form-control" id="pay-method" required>
+                <option value="" disabled selected hidden>Payment method</option>
+                <option value="delivery">Cash on delivery</option>
+                <option value="online">Pay with a bank card</option>
+            </select>
+
+            <div class="checkbox">
+                <label><input type="checkbox" value="">Delivery by courier</label>
+            </div>
+
+            <button id="process-order" ng-click="processOrder()" type="submit" class="btn btn-success">
+                Confirm and process the order
+            </button>
+        </div>
+
+    </form>
+</div>
