--- a/src/main/webapp/order/creation/order-creation.template.html
+++ b/src/main/webapp/order/creation/order-creation.template.html
@@ -3,7 +3,8 @@
 </head>
 
 <div class="panel-body">
-    <form id="order-form" class="col-sm-6 col-sm-offset-3">
+
+    <form ng-submit="processOrder()" id="order-form" class="col-sm-6 col-sm-offset-3">
         <div id="capital-row">Check the data</div>
 
         <div class="col-sm-3 block-container">
@@ -31,10 +32,10 @@
             </select>
 
             <div class="checkbox">
-                <label><input type="checkbox" value="">Delivery by courier</label>
+                <label><input type="checkbox" id="delivery" value="">Delivery by courier</label>
             </div>
 
-            <button id="process-order" ng-click="processOrder()" type="submit" class="btn btn-success">
+            <button id="process-order" type="submit" class="btn btn-success">
                 Confirm and process the order
             </button>
         </div>
