clearing shopping cart after making order

--- a/src/main/webapp/order/creation/order-creation.template.html
+++ b/src/main/webapp/order/creation/order-creation.template.html
@@ -28,7 +28,7 @@
             <select class="form-control" id="pay-method" required>
                 <option value="" disabled selected hidden>Payment method</option>
                 <option value="delivery">Cash on delivery</option>
-                <option value="online">Pay with a bank card</option>
+                <option value="online" disabled>Pay with a bank card</option>
             </select>
 
             <div class="checkbox">
