--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -28,6 +28,7 @@
     <script src="/catalog/product.detail/product.editor/product-creator.component.js"></script>
     <script src="/catalog/product.detail/product.editor/product-editor.component.js"></script>
     <script src="/order/creation/order-creation.component.js"></script>
+    <script src="/order/success.page/success-page.component.js"></script>
 </head>
 <body>
 
