--- a/src/main/webapp/order/success.page/success-page.template.html
+++ b/src/main/webapp/order/success.page/success-page.template.html
@@ -4,8 +4,10 @@
 
 <div class="panel-body">
     <div class="row">
-        <div id="success-message" class="col-sm-6 col-sm-offset-3">
-            SUCCESS
+        <div id="success-message" class="col-sm-8 col-sm-offset-2">
+            <h3>Thank You!</h3>
+            <h4>Order has been successfully created. Expect your alcohol soon.</h4>
+            <h4>Let's Get Drunk!</h4>
         </div>
     </div>
 </div>
