--- a/src/main/webapp/catalog/products/catalog-products.template.html
+++ b/src/main/webapp/catalog/products/catalog-products.template.html
@@ -3,7 +3,14 @@
 </head>
 
 <div id="panel-heading" class="panel-heading">
+
+    <input ng-model="photo" id="open-csv-input" type="file" accept=".csv" onchange="readCSVinCategories(this)">
+    <button id="open-csv-button" type="button" class="btn btn-default">
+        Update price and status using CSV
+    </button>
+
     {{categoryName}}
+
     <span id="create-panel" ng-if="isAuthority('ADMIN')">
         <a id="create-product" href="#!/catalog/products/create/">
             <button type="button" class="btn btn-default category-actions-button">Add product</button>
@@ -12,6 +19,7 @@
             <button type="button" class="btn btn-default category-actions-button">Add category</button>
         </a>
     </span>
+
     <hr id="hr-heading">
 </div>
 <div class="panel-body">
