--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -59,9 +59,6 @@
                             </li>
                         </ul>
                     </li>
-
-                    <!--<li><a href="#">Page 2</a></li>-->
-                    <!--<li><a href="#">Page 3</a></li>-->
                 </ul>
 
                 <form class="navbar-form navbar-left" ng-submit="search()">
@@ -75,6 +72,10 @@
                         </div>
                     </div>
                 </form>
+
+                <ul class="nav navbar-nav" ng-if="!isAuthority('ROLE_ANONYMOUS')">
+                    <li><a href="#">Orders</a></li>
+                </ul>
 
                 <ul class="nav navbar-nav navbar-right">
                     <div id="user-name" class="nav navbar-nav" ng-if="!isAuthority('ROLE_ANONYMOUS')">
