order content modal window created

--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -30,6 +30,7 @@
     <script src="/order/creation/order-creation.component.js"></script>
     <script src="/order/success.page/success-page.component.js"></script>
     <script src="/order/order.view/order-view.component.js"></script>
+    <script src="/order/order.content/order-content.component.js"></script>
 </head>
 <body>
 
