--- a/src/main/webapp/order/order.view/order-view.template.html
+++ b/src/main/webapp/order/order.view/order-view.template.html
@@ -11,9 +11,44 @@
     <div class="row">
         <div class="list-group" id="list-group" ng-repeat="order in orders">
             <a href="" ng-click="showOrderContent(order)" class="list-group-item" id="list-group-item">
-                
-                {{order.date}}
-                <div>{{order.status}}</div>
+
+                <div id="left-container">
+                    <label>Time:</label>
+                    <div>{{order.date}}</div>
+                    <div id="price"><label>Price:&nbsp;&nbsp;</label>{{order.price}} $</div>
+                </div>
+
+                <div id="center-container">
+                    <div id="phone-container">
+                        <div>
+                            <div class="div-label">Phone:</div>
+                        </div>
+                        <div>{{order.phone}}</div>
+                    </div>
+
+                    <div id="address-container">
+                        <div>
+                            <div class="div-label">Address:</div>
+                        </div>
+                        <textarea id="address" class="form-control">{{order.address}}</textarea>
+                    </div>
+                </div>
+
+                <div id="right-container">
+                    <div id="status-container">
+                        <select ng-model="order.status" ng-options="status for status in statusList track by status"
+                                ng-click="$event.stopPropagation();$event.preventDefault()"
+                                id="status" class="form-control">
+                        </select>
+                    </div>
+                    <div class="checkbox" id="delivery-container">
+                        <label>
+                            <input ng-model="order.delivery" type="checkbox" readonly id="delivery" value="">
+                            Delivery by courier
+                        </label>
+                    </div>
+                </div>
+
             </a>
         </div>
     </div>
