loading product photo to OrderContent view

--- a/src/main/webapp/order/order.content/order-content.template.html
+++ b/src/main/webapp/order/order.content/order-content.template.html
@@ -11,7 +11,7 @@
 
         <div ng-repeat="content in orderContentList">
 
-            <img ng-src="data:image/jpeg;base64,{{orderContent.product.photo}}" id="productPhoto">
+            <img ng-src="data:image/jpeg;base64,{{content.product.photo}}" id="productPhoto">
 
             <div class="column">
                 <div id="productName">
