--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -31,6 +31,7 @@
     <script src="/order/success.page/success-page.component.js"></script>
     <script src="/order/order.view/order-view.component.js"></script>
     <script src="/order/order.content/order-content.controller.js"></script>
+    <script src="/history/history.component.js"></script>
 </head>
 <body>
 
