fixed bug with user authority

--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -100,7 +100,7 @@
                             <a href="#!/login"><span class="glyphicon glyphicon-log-in"></span>&nbsp;Login</a>
                         </li>
                         <li ng-if="!isAuthority('ROLE_ANONYMOUS')">
-                            <a href="" ng-click="showHistory()">
+                            <a href="#!/user/history">
                                 <span class="glyphicon glyphicon-list-alt"></span>&nbsp;History
                             </a>
                         </li>
