--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -124,7 +124,7 @@
 
     <div class="navbar-bottom row-fluid">
         <footer>
-            footer
+            Developed by Ostryzhniuk Andrii for Sombra
         </footer>
     </div>
 
