--- a/src/main/webapp/home.page/index.html
+++ b/src/main/webapp/home.page/index.html
@@ -53,10 +53,10 @@
 
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="">
-                            Classification&nbsp;<span class="caret"></span>
+                            Catalog&nbsp;<span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="#!/catalog">Classification</a></li>
+                            <li><a href="#!/catalog">All categories</a></li>
                             <li ng-repeat="category in categories | orderBy:orderProp">
                                 <a href="#!/catalog/{{category.name}}">{{category.name}}</a>
                             </li>
